# research-passkeys

./: .gitignore  README.md
.playwright-mcp/: page-2026-06-30T20-17-33-955Z.yml  page-2026-06-30T20-17-56-289Z.yml  page-2026-06-30T20-18-10-873Z.yml  page-2026-06-30T20-18-25-739Z.yml  page-2026-06-30T20-32-01-516Z.yml  page-2026-06-30T20-32-53-447Z.yml  page-2026-06-30T20-33-06-546Z.yml  page-2026-06-30T20-33-17-925Z.yml  page-2026-06-30T20-33-35-330Z.yml
azure-automation/function-passkey-runbooks/: LoginWithEntraPasskey.Runbook.ps1  LoginWithPasskey.Runbook.ps1  README.md  RegisterEntraPasskeyViaEstsAuth.Runbook.ps1  RegisterEntraPasskeyViaTap.Runbook.ps1
browser-extensions/: README.md  TODO.md  reference.md
browser-extensions/keyvault-passkey-provider/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
contracts/: credential-envelope.schema.json  passkey-capture-context.schema.json  passkey-catalog-record.schema.json  passkey-login-credential.schema.json  stored-credential-record.schema.json
docs/: examples-matrix.md
docs/architecture/: passkey-capture-context.md  passkey-catalog.md  repo-structure.md
docs/auth/: conditional-access.md  passkey-login-contract.md
function-app/: README.md  TODO.md
powershell/: README.md
python/: README.md
python/libraries/passkey/: README.md  pyproject.toml
python/libraries/passkey/src/passkey/: __init__.py  entra_login.py  entra_registration.py  okta.py
samples/: README.md
shared/: README.md
templates/: README.md
windows-passkey-provider/: README.md  reference.md
(+207 files in other folders)
